--- a/pages/wxml/index.wxml
+++ b/pages/wxml/index.wxml
@@ -10,3 +10,20 @@
 <view>{{var4}}</view>
 <text>当前时间：{{time}}</text>
 <text>{{a == 10 ? "variable a equals to 10" : "variable a not equals to 10"}}</text>
+<view wx:for="{{array}}">
+  {{index}}:{{item.message}}
+</view>
+<view wx:for="{{array}}" wx:for-index="idx" wx:for-item="itemName">
+  {{idx}}:{{itemName.message}}
+</view>
+<block wx:for="{{[1,2,3]}}">
+  <view>{{index}}: </view>
+  <view>{{item}} </view>
+</block>
+
+<switch wx:for="{{objectArray}}" wx:key="unique">{{item.id}}</switch>
+<button bindtap="switch">Switch</button>
+<button bindtap="addToFront">Add to the front</button>
+
+<switch wx:for="{{numberArray}}" wx:key="*this">{{item}} </switch>
+<button bindtap="addNumberToFront">Add number to the front</button>
